# online_store

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: BaseProduct.py  Mixins.py  abstract_classes.py  categories.py  classes.py  excpetion_classes.py  mixins.py
tests/: test_categories.py  test_classes.py  test_mixins.py  tests_mixins.py
