[project]
name = "online shop"
version = "0.1.0"
description = "онлайн магазин разрабатываем в каечстве домашки по python"
authors = [
    {name = "aaafeig",email = "geroy.ozhog08@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
